Removed footer fix, caused problems on small devides

--- a/Webpage/css/main.css
+++ b/Webpage/css/main.css
@@ -412,8 +412,6 @@ footer {
   padding: 20px;
   text-align: center;
   background: #dedede;
-  margin-right: -10000px;
-  margin-left: -10000px;
 }
 
 .btn-colored {
